fixed crash on small downloads
happened on downloads < 1MB. This was the result of a sequence of bugs, triggered because the downloaded size was smaller than the initial request (which happens to always be 1MB).

--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -1046,7 +1046,7 @@ a[role=menuitem] svg {
 // tables
 .table-actions {
   display: inline-flex;
-  >.btn {
+  .btn {
     @extend .btn-embed;
     @extend .hcenter;
   }
